attempt 17 at fetching files differently
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>